@@ -16,8 +16,8 @@
 			</last>
 		</scripts>
 		<sql>
-			<db>432</db>
-			<file>432</file>
+			<db>433</db>
+			<file>433</file>
 		</sql>
 	</versions>
 </nzedb>
