@@ -1,0 +1,2 @@
+# Update existing recaptcha settings with newer section,subsection,name data.
+UPDATE settings
