@@ -8,6 +8,8 @@ All entries are dated according to merging into the code in dev branch. THIS MEA
 NOT BE PRESENT IN THE STABLE BRANCH
 For details of when a commit makes it into the stable branch see the ReleaseNotes file.
 
+2016-05-07 niel
+	Chg: alter subsection,name fields to settings for recaptcha.
 2016-05-06 DariusIII
 	Fix: Missing use statement for Category class in admin pages.
 2016-05-06 bart39
